integration/fixtures/k8s-session-persistence/basic-routing-ingressroute/backend-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-ir-basic
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-ir-basic
  template:
    metadata:
      labels:
        app: whoami-ir-basic
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
