integration/fixtures/k8s-session-persistence/basic-routing-ingressroute/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-ir-basic
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami-ir-basic
