integration/fixtures/k8s-session-persistence/basic-routing-ingressroute/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ir-basic
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami-ir-basic.localhost`)
      kind: Rule
      services:
        - name: whoami-ir-basic
          port: 80
